--- a/frontend/supliers/suply.html
+++ b/frontend/supliers/suply.html
@@ -63,7 +63,7 @@
           </div>
         </div>
         </div>
-    <div class="container min-vh-100 d-flex justify-content-center align-items-center">
+    <div class="p container min-vh-100 d-flex justify-content-center align-items-center">
         <div class="row w-100 justify-content-center">
             <div class="col-md-8">
                 <h4 class="text-center">Supplier Registration Form</h4>
@@ -134,52 +134,59 @@
         </div>
     </div>
     
+<!-- Footer -->
+<!-- Footer -->
+<footer class="bg-dark text-light py-4 footer-animated">
+    <div class="container-sm">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>About Us</h5>
+          <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
+        </div>
+        <div class="col-md-4">
+          <h5>Quick Links</h5>
+          <ul class="list-unstyled footer-content">
+            <li><a href="home.htm" class="text-light">Home</a></li>
+            <li><a href="#" class="text-light">About</a></li>
+            <li><a href="#" class="text-light">Services</a></li>
+            <li><a href="index.html" class="text-light">Packages</a></li>
+            <li><a href="#" class="text-light">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h5>Contact Us</h5>
+          <p class="footer-content">Email: info@eventplanner.com</p>
+          <p class="footer-content">Phone: +250785300707</p>
+          <p class="footer-content">Address: 123 Event St, City, Country</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center mt-4">
+          <ul class="list-inline footer-content">
+            <li class="list-inline-item">
+              <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i class="fab fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center mt-3">
+          <p>&copy; 2024 Event Planner. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  
+  
 
-    <!-- Footer -->
-    <footer class="bg-dark text-light py-4 footer-animated">
-        <div class="row">
-            <div class="col-md-4">
-                <h5>About Us</h5>
-                <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
-            </div>
-            <div class="col-md-4">
-                <h5>Quick Links</h5>
-                <ul class="list-unstyled footer-content">
-                    <li><a href="home.htm" class="text-light">Home</a></li>
-                    <li><a href="#" class="text-light">About</a></li>
-                    <li><a href="#" class="text-light">Services</a></li>
-                    <li><a href="index.html" class="text-light">Packages</a></li>
-                    <li><a href="#" class="text-light">Contact</a></li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <h5>Contact Us</h5>
-                <p class="footer-content">Email: info@eventplanner.com</p>
-                <p class="footer-content">Phone: +250785300707</p>
-                <p class="footer-content">Address: 123 Event St, City, Country</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col text-center mt-4">
-                <ul class="list-inline footer-content">
-                    <li class="list-inline-item">
-                        <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i class="fab fa-instagram"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col text-center mt-3">
-                <p>&copy; 2024 Event Planner. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
+
+
   
     <!-- Bootstrap 5 JS (needs Popper.js for the navbar toggle) -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
