--- a/frontend/test.html
+++ b/frontend/test.html
@@ -1,107 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Supplier Registration - Wedding Planner</title>
-  <!-- Bootstrap 5 CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Supplier Registration - Wedding Planner</title>
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/frontend/css/supply.css">
+    <link rel="stylesheet" href="/frontend/css/footer.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand logo-margin" href="#">Logo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/frontend/home_packages/home.htm">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Service</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/frontend/home_packages/index.html">Packages</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <div class="sup-container py-5">
-    <!-- Welcome Message -->
-    <div class="row">
-      <div class="col-12">
-        <h2 class="text-center text-primary mb-4">Welcome Wedding Suppliers!</h2>
-        <p class="lead text-center">
-          We're thrilled that you're interested in becoming a part of our exclusive network of wedding service providers. Our platform is designed to help connect trusted suppliers with couples planning their dream weddings. Whether you specialize in catering, photography, floral arrangements, or other wedding services, we want to showcase your expertise and help you grow your business.
-        </p>
-      </div>
+    <div class="container py-5">
+        <!-- Welcome Message -->
+        <div class="row">
+          <div class="col-12">
+            <h2 class="text-center text-primary mb-4">Welcome Wedding Suppliers!</h2>
+            <p class="lead text-center">
+              We're thrilled that you're interested in becoming a part of our exclusive network of wedding service providers. Our platform is designed to help connect trusted suppliers with couples planning their dream weddings. Whether you specialize in catering, photography, floral arrangements, or other wedding services, we want to showcase your expertise and help you grow your business.
+            </p>
+          </div>
+        </div>
+        </div>
+
+    <!-- Supplier Registration Form -->
+    <div class="container min-vh-100 d-flex justify-content-center align-items-center">
+        <div class="row w-100 justify-content-center">
+            <div class="col-md-8">
+                <h4 class="text-center">Supplier Registration Form</h4>
+                <form>
+                    <div class="mb-3">
+                        <label for="firstName" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="firstName" placeholder="First Name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="lastName" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="lastName" placeholder="Last Name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="contactEmail" class="form-label">Contact Email</label>
+                        <input type="email" class="form-control" id="contactEmail" placeholder="Email Address" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="contactNumber" class="form-label">Contact Number</label>
+                        <input type="text" class="form-control" id="contactNumber" placeholder="Phone Number" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="location" class="form-label">Location</label>
+                        <input type="text" class="form-control" id="location" placeholder="Location" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="serviceCategory" class="form-label">Service Category</label>
+                        <select class="form-select" id="serviceCategory" required>
+                            <option value="" disabled selected>Select Service Category</option>
+                            <option value="1">Catering</option>
+                            <option value="2">Photography</option>
+                            <option value="3">Venue</option>
+                            <option value="4">Florists</option>
+                            <option value="5">Wedding Planner</option>
+                            <option value="6">Decor</option>
+                            <option value="7">Cars</option>
+                            <option value="8">Invitation Cards</option>
+                            <option value="9">Beauty</option>
+                            <option value="10">Style</option>
+                            <option value="11">M.C</option>
+                            <option value="12">Sound & Light</option>
+                            <option value="13">Entertainment</option>
+                            <option value="14">Other</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="yearsExperience" class="form-label">Years of Experience</label>
+                        <input type="number" class="form-control" id="yearsExperience" placeholder="Enter Years of Experience" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="portfolioLink" class="form-label">Portfolio/Instagram Profile Link</label>
+                        <input type="url" class="form-control" id="portfolioLink" placeholder="Instagram or Portfolio Link">
+                    </div>
+                    <div class="mb-3">
+                        <label for="shortDescription" class="form-label">Short Description or Message</label>
+                        <textarea class="form-control" id="shortDescription" rows="3" placeholder="Tell us about your services" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Register as Supplier</button>
+                </form>
+            </div>
+        </div>
     </div>
 
-    <!-- Benefits of Registering -->
-    <div class="row">
-      <div class="col-12">
-        <h3 class="text-center mb-4">By registering as a supplier with us, you'll have the opportunity to:</h3>
-        <ul class="list-group">
-          <li class="list-group-item">Reach a broader audience of couples looking for reliable wedding vendors.</li>
-          <li class="list-group-item">Showcase your work, share your story, and highlight your unique offerings.</li>
-          <li class="list-group-item">Join a community of top-tier wedding professionals committed to making each event unforgettable.</li>
-        </ul>
+    <!-- Footer -->
+<!-- Footer -->
+<footer class="bg-dark text-light py-4 footer-animated">
+    <div class="container-sm py-4">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>About Us</h5>
+          <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
+        </div>
+        <div class="col-md-4">
+          <h5>Quick Links</h5>
+          <ul class="list-unstyled footer-content">
+            <li><a href="home.htm" class="text-light">Home</a></li>
+            <li><a href="#" class="text-light">About</a></li>
+            <li><a href="#" class="text-light">Services</a></li>
+            <li><a href="index.html" class="text-light">Packages</a></li>
+            <li><a href="#" class="text-light">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h5>Contact Us</h5>
+          <p class="footer-content">Email: info@eventplanner.com</p>
+          <p class="footer-content">Phone: +250785300707</p>
+          <p class="footer-content">Address: 123 Event St, City, Country</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center mt-4">
+          <ul class="list-inline footer-content">
+            <li class="list-inline-item">
+              <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i class="fab fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center mt-3">
+          <p>&copy; 2024 Event Planner. All rights reserved.</p>
+        </div>
       </div>
     </div>
+  </footer>
 
-    <!-- Call to Action and Registration Instructions -->
-    <div class="row mt-4">
-      <div class="col-12">
-        <h4 class="text-center mb-4">To get started, please complete the supplier registration form below.</h4>
-        <p class="text-center">
-          Once your details are submitted, we'll review your application and contact you with the next steps.
-        </p>
-        <p class="text-center">
-          We can't wait to have you on board as we work together to create beautiful, memorable weddings for our clients!
-        </p>
-        <p class="text-center">
-          Thank you for considering us as your partner in wedding planning. We look forward to collaborating with you!
-        </p>
-      </div>
-    </div>
-    
-    <!-- Supplier Registration Form (optional) -->
-    <div class="row mt-5">
-      <div class="col-md-8 offset-md-2">
-        <h4 class="text-center">Supplier Registration Form</h4>
-        <form>
-          <!-- Supplier Name -->
-          <div class="mb-3">
-            <label for="companyName" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="companyName" placeholder="First Name" required>
-          </div>
-          <!-- Contact Information --> 
-          <div class="mb-3">
-            <label for="contactName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="contactName" placeholder="Last Name" required>
-          </div>
-          <div class="mb-3">
-            <label for="contactEmail" class="form-label">Contact Email</label>
-            <input type="email" class="form-control" id="contactEmail" placeholder="Email address" required>
-          </div>
-          <div class="mb-3">
-            <label for="contactNumber" class="form-label">Contact Number</label>
-            <input type="text" class="form-control" id="contactNumber" placeholder="Phone number" required>
-          </div>
-          <!-- Service Category -->
-          <div class="mb-3">
-            <label for="serviceCategory" class="form-label">Service Category</label>
-            <select class="form-select" id="serviceCategory" required>
-              <option value="" disabled selected>Select service category</option>
-              <option value="1">Catering</option>
-              <option value="2">Videography & Photography</option>
-              <option value="3">Venue</option>
-              <option value="4">Florists</option>
-              <option value="5">Wedding Planner</option>
-              <option value="6">Decor</option>
-              <option value="7">Cars</option>
-              <option value="8">Invitation Card</option>
-              <option value="9">Beauty</option>
-              <option value="10">Style</option>
-              <option value="11">M.C</option>
-              <option value="12">Sound & Light</option>
-              <option value="13">Type of Entertainment</option>
-              <option value="14">Other..</option>
-            </select>
-          </div>
-          <!-- Submit Button -->
-          <button type="submit" class="btn btn-primary w-100">Register as Supplier</button>
-        </form>
-      </div>
-    </div>
-  </div>
-
-  <!-- Bootstrap 5 JS (needs Popper.js for the navbar toggle) -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
 </body>
 </html>
