--- a/frontend/home_packages/booking.html
+++ b/frontend/home_packages/booking.html
@@ -4,17 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking</title>
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-    crossorigin="anonymous"
-    />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="/frontend/css/navbar.css">
-    <link rel="stylesheet" href="/frontend/css/booking.css">
+   
     <link rel="stylesheet" href="/frontend/css/footer.css">
-    
+    <style>
+        /* Full-page layout */
+        html, body {
+            height: 100%;
+            margin: 0;
+            overflow: hidden; /* Disable scrolling */
+        }
+
+        /* Navbar fixed at the top */
+        .navbar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        /* Video background */
+        .video-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ensures the video covers the full viewport */
+            z-index: -1; /* Send the video behind other content */
+        }
+
+        /* Adjust the form container */
+        .container {
+            margin-top: 90px; /* Add enough space for the fixed navbar */
+            height: calc(100% - 90px); /* Fill the remaining space */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            box-sizing: border-box;
+            overflow-y: auto; /* If needed, allows scrolling in the form container */
+        }
+
+        .bok {
+            font-size: 2rem;
+            margin-bottom: 30px;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -28,75 +66,66 @@
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="home.htm">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Service</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">Packages</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Packages</a></li>
                     <li class="nav-item"><a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">Booking</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="booking.html">Booking</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Video Background -->
-    <video class="video-container" src="/assethome/booking.mp4" autoplay muted></video>
+    <video class="video-container" src="/assethome/booking.mp4" autoplay loop muted></video>
 
     <!-- Booking Form -->
-    <div class="container mt-5">
-      <div class="mb-3">
+    <div class="container">
         <div class="mb-3">
-          <div class="mb-3">
-          <h2 class="bok text-light">Book Your Event</h2>
-        <form action="/submit-booking" method="POST">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="mb-3">
-                        <label for="fullName" class="form-label text-light">Full Name</label>
-                        <input type="text" class="form-control" id="fullName" name="fullName" required>
+            <h2 class="bok text-light">Book Your Event</h2>
+            <form action="/submit-booking" method="POST">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <label for="fullName" class="form-label text-light">Full Name</label>
+                            <input type="text" class="form-control" id="fullName" name="fullName" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label text-light">Email Address</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="phone" class="form-label text-light">Phone Number</label>
+                            <input type="tel" class="form-control" id="phone" name="phone">
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label text-light">Email Address</label>
-                        <input type="email" class="form-control" id="email" name="email" required>
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <label for="eventType" class="form-label text-light">Event Type</label>
+                            <select class="form-control" id="eventType" name="eventType" required>
+                                <option value="">Select Event Type</option>
+                                <option value="Full-Package">Full-Package</option>
+                                <option value="Half-package">Half-package</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="eventDate" class="form-label text-light">Event Date</label>
+                            <input type="date" class="form-control" id="eventDate" name="eventDate" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="numAttendees" class="form-label text-light">Number of Attendees</label>
+                            <input type="number" class="form-control" id="numAttendees" name="numAttendees" required>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                      <label for="phone" class="form-label text-light">Phone Number</label>
-                      <input type="tel" class="form-control" id="phone" name="phone">
-                  </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="mb-3">
-                        <label for="eventType" class="form-label text-light">Event Type</label>
-                        <select class="form-control" id="eventType" name="eventType" required>
-                            <option value="">Select Event Type</option>
-                            <option value="Full-Package">Full-Package</option>
-                            <option value="Half-package">Half-package</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="eventDate" class="form-label text-light">Event Date</label>
-                        <input type="date" class="form-control" id="eventDate" name="eventDate" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="numAttendees" class="form-label text-light">Number of Attendees</label>
-                        <input type="number" class="form-control" id="numAttendees" name="numAttendees" required>
-                    </div>
+                <div class="mb-3">
+                    <label for="specialRequests" class="form-label text-light">Special Requests or Notes</label>
+                    <textarea class="form-control" id="specialRequests" name="specialRequests" rows="3"></textarea>
                 </div>
-            </div>
-            <div class="mb-3">
-                <label for="specialRequests" class="form-label text-light">Special Requests or Notes</label>
-                <textarea class="form-control" id="specialRequests" name="specialRequests" rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit Booking</button>
-        </form>
+                <button type="submit" class="btn btn-primary">Submit Booking</button>
+            </form>
+        </div>
     </div>
 
-    <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"
-    ></script>
-    <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
