--- a/frontend/home_packages/index.html
+++ b/frontend/home_packages/index.html
@@ -52,7 +52,7 @@
               <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Booking</a>
+              <a class="nav-link active" href="booking.html">Booking</a>
             </li>
           </ul>
         </div>
