--- a/frontend/supliers/suply.html
+++ b/frontend/supliers/suply.html
@@ -46,7 +46,7 @@
                         <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Booking</a>
+                        <a class="nav-link active" href="/frontend/home_packages/booking.html">Booking</a>
                     </li>
                 </ul>
             </div>
