--- a/frontend/home_packages/index.html
+++ b/frontend/home_packages/index.html
@@ -13,6 +13,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+
     <!-- FontAwesome for icons -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
@@ -250,6 +251,7 @@
   </div>
 </footer>
 
+<!-- Initialize AOS -->
 
 
     <!-- bootstrap js -->
