--- a/frontend/home_packages/service.html
+++ b/frontend/home_packages/service.html
@@ -5,56 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wedding Planner Professionals</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+      <!-- FontAwesome for icons -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <!-- AOS CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
+  <!-- External Styles (if any) -->
   <link rel="stylesheet" href="/frontend/css/navbar.css">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
+  <link rel="stylesheet" href="/frontend/css/footer.css">
+  <link rel="stylesheet" href="/frontend/css/service.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand logo-margin" href="#">Logo</a>
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-            >
-                <span class="navbar-toggler-icon"></span>
-            </button>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand logo-margin" href="#">Logo</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-               
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/frontend/home_packages/home.htm">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Service</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/frontend/home_packages/index.html">Packages</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Booking</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link active" href="/frontend/home_packages/home.htm">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#">Service</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/frontend/home_packages/index.html">Packages</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#">Booking</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
   <div class="container py-5">
     <h2 class="text-center mb-5">Our Wedding Planning Professionals</h2>
 
     <div class="row">
       <!-- Wedding Planner -->
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000">
         <div class="card">
           <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Wedding Planner">
           <div class="card-body">
@@ -65,7 +62,7 @@
       </div>
 
       <!-- Venue Manager -->
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
         <div class="card">
           <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Venue Manager">
           <div class="card-body">
@@ -76,7 +73,7 @@
       </div>
 
       <!-- Event Coordinator -->
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
         <div class="card">
           <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Event Coordinator">
           <div class="card-body">
@@ -87,7 +84,7 @@
       </div>
 
       <!-- Decor Specialist -->
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
         <div class="card">
           <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Decor Specialist">
           <div class="card-body">
@@ -98,7 +95,7 @@
       </div>
 
       <!-- Catering Manager -->
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
         <div class="card">
           <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Catering Manager">
           <div class="card-body">
@@ -109,7 +106,7 @@
       </div>
 
       <!-- Photographer/Videographer -->
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
         <div class="card">
           <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Photographer/Videographer">
           <div class="card-body">
@@ -121,7 +118,62 @@
 
     </div>
   </div>
-
+<!-- Footer -->
+<footer class="bg-dark text-light py-4 footer-animated">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>About Us</h5>
+          <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
+        </div>
+        <div class="col-md-4">
+          <h5>Quick Links</h5>
+          <ul class="list-unstyled footer-content">
+            <li><a href="home.htm" class="text-light">Home</a></li>
+            <li><a href="#" class="text-light">About</a></li>
+            <li><a href="#" class="text-light">Services</a></li>
+            <li><a href="index.html" class="text-light">Packages</a></li>
+            <li><a href="#" class="text-light">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h5>Contact Us</h5>
+          <p class="footer-content">Email: info@eventplanner.com</p>
+          <p class="footer-content">Phone: +250785300707</p>
+          <p class="footer-content">Address: 123 Event St, City, Country</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center mt-4">
+          <ul class="list-inline footer-content">
+            <li class="list-inline-item">
+              <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i class="fab fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center mt-3">
+          <p>&copy; 2024 Event Planner. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- AOS JS -->
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Initialize AOS -->
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
